package modele.bien;

public class Terrain {
	private double surfaceTotale;
	private double longueurFacade;
	
	public Terrain() {
		
	}

}
